# asap-extract-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_api_key_perms.py  0003_jobs_inflight_idx.py
app/: bootstrap.py  config.py  main.py
app/api/: admin.py  deps.py  v1.py
app/auth/: keys.py
app/db/meta/: engine.py  models.py
app/db/source/: connection.py
app/extract/: paginator.py  pipeline.py  registry.py  sweeper.py  writer.py
app/observability/: logging.py  metrics.py  middleware.py
app/static/: admin.html
app/storage/: paths.py
app/workers/: __init__.py  arq_worker.py
deploy/: Dockerfile  docker-compose.yml
deploy/extra-ca/: README.md
deploy/mysql-seed/: 01_schema.sql  02_seed.sql
deploy/nginx/: nginx.conf
docs/: admin-guide.md  user-guide.md
scripts/: bundle.sh  unbundle.sh
tests/integration/: test_e2e_extract.py
tests/unit/: test_csv_writer.py  test_paginator_sql.py  test_registry.py
